<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="#99FFEFD5">
    <Space
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5sp"
            android:gravity="center"
            android:text="@string/achievement"
            android:textColor="#66000000"
            android:textSize="40sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10sp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="25sp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/score"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/maxnumber"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/un_ndo"/>

        </LinearLayout>


        <m2048.banrossyn.viewFor2048.SquareListView
            android:id="@+id/lv_achievement"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10sp" />

        <TextView
            android:id="@+id/btn_achievementOK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_margin="10sp"
            android:gravity="center"
            />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />
</LinearLayout>