<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="#99FFEFD5"
    android:orientation="vertical">
    <Space
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <LinearLayout
        android:id="@+id/TextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/game_over"
            android:textSize="40sp"
            android:textStyle="bold"
            android:layout_margin="5sp"
            android:textColor="#66000000"/>

        <TextView
            android:id="@+id/tv_gameoverscore"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/you_get_null_scores"
            android:textSize="20sp"
            android:layout_margin="3sp"
            android:textColor="#66000000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/tv_restart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/restart"
                android:textStyle="bold"
                android:textSize="25sp"
                android:layout_margin="10sp"
                android:textColor="#88000000" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textStyle="bold"
                android:textSize="25sp"
                android:layout_margin="10sp"
                android:textColor="#88000000"/>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

        </LinearLayout>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_toLeftOf="@id/TextLayout"/>

</LinearLayout>