<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="#99FFEFD5"
    android:orientation="vertical">

    <Space
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableRow>



                <TextView
                    android:id="@+id/tv_author"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10sp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/author"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>

            </TableRow>

            <TableRow>



                <TextView
                    android:id="@+id/tv_github"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10sp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/github"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>

            </TableRow>

            <TableRow>



                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10sp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/Version"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </TableRow>


        </TableLayout>

        <TextView
            android:id="@+id/btn_aboutOK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:gravity="center"
            android:text="OK"
            android:textSize="25sp"
            android:textStyle="bold" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />
</LinearLayout>