<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    tools:context=".game2048.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20sp"
            android:layout_marginVertical="30sp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_icon"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="20sp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/_2048"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/game"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <Space
                android:layout_width="20sp"
                android:layout_height="wrap_content" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/round_score"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:padding="20sp"
                android:stretchColumns="1">

                <TableRow>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/score_"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_score"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/num_null"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                </TableRow>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10sp" />

                <TableRow>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/best"
                        android:textColor="#BBBBBB"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_bestScore"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/num_null"
                        android:textColor="#BBBBBB"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </TableRow>
            </TableLayout>
        </LinearLayout>

        <include layout="@layout/game_view" />

    </LinearLayout>

    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/btn_menuOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        app:fab_addButtonColorNormal="#FFFFFF"
        app:fab_addButtonPlusIconColor="#FFC999"
        app:fab_addButtonColorPressed="#8B4513">

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="#FFFFFF"
            app:fab_colorPressed="#8B4513"
            app:fab_icon="@drawable/ic_restart"
            android:onClick="onRestartBtnClicked"/>

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="#FFFFFF"
            app:fab_colorPressed="#8B4513"
            app:fab_icon="@drawable/ic_achievement"
            android:onClick="onAchievementBtnClicked"/>

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="#FFFFFF"
            app:fab_colorPressed="#8B4513"
            app:fab_icon="@drawable/ic_about"
            android:onClick="onAboutBtnClicked"/>

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="#FFFFFF"
            app:fab_colorPressed="#8B4513"
            app:fab_icon="@drawable/ic_readme"
            android:onClick="onReadmeBtnClicked"/>

    </com.getbase.floatingactionbutton.FloatingActionsMenu>

    <com.getbase.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/btn_menuOut"
        android:layout_alignParentBottom="true"
        app:fab_colorNormal="#FFFFFF"
        android:onClick="onUndoBtnClicked"
        app:fab_icon="@drawable/ic_undo"/>

</RelativeLayout>